# HumidTemp_Meter

./: .gitignore
App/: readme.md
App/Disp7SegLED/: disp7segLed.c  disp7segLed.h  tm1637.c  tm1637.h
App/DispOLED/: characters.h  dispOLED.c  dispOLED.h  ssd1306.c  ssd1306.h
App/GPS/: gps.c  gps.h  neo6m.c  neo6m.h
App/Lotto/: lotto.c  lotto.h
App/Main/: main.c  main.h  to_do.txt
App/Main/config/: config.h
App/Peripherals/avr/: adc.c  adc.h  dio.c  dio.h  i2c.c  i2c.h  int.c  int.h  m328p.c  m328p.h  peripherals.c  peripherals.h  tim.c  tim.h  uart.c  uart.h
App/Presenter/: presenter.c  presenter.h
App/RTC/: ds1307.c  ds1307.h  rtc.c  rtc.h
App/TEMPLATES/: header_template.h  source_template.c
App/TempHumidSensor/: dht.c  dht.h  tempHumid.c  tempHumid.h
App/View/: view.c  view.h
UnitTest/include/avr/: io.h
UnitTest/include/config/: test_config.h
UnitTest/include/util/: delay.h
UnitTest/lotto/: CMakeLists.txt  lotto_test.c  lotto_test_main.c  lotto_test_runner.c  main.py  mock_lotto.c
UnitTest/lotto/fake/: fake_lotto.c  fake_lotto.h
UnitTest/tests_google/: CMakeLists.txt
UnitTest/tests_unity/: CMakeLists.txt  dio_test_runner.c  lotto_test_runner.c  test_main.c
UnitTest/tests_unity/dio/: dio_test.c
UnitTest/tests_unity/lotto/: lotto_test.c  mock_lotto.h
